# how2avar2

./: .gitignore  .gitmodules  404.html  AUTHORS.txt  CONTRIBUTORS.txt  Makefile  OFL.txt  README.md  SETUP.md  __next.!KGhvbWUp.__PAGE__.txt  __next.!KGhvbWUp.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt  llms-full.txt  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
404/: index.html
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
api/: search
docs/acknowledgments/: __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  __next.docs.$oc$slug.__PAGE__.txt  __next.docs.$oc$slug.txt  __next.docs.txt  index.html  index.txt
documentation/: image1.py  image2.py  image3.py  image4.py  image5.py  image6.py  image7.py  image8.py
how2avar2/: .gitignore  README.md  next.config.mjs  package.json
infographics/: README.md  astro.config.ts  package.json
scripts/: avar1-quadratic-rotation.py  composited-images.py  composited.py  fix-axis-bounds.py  fix-opsz.py  rename-fonts.py
sources/: avar1.designspace  avar2.designspace  avar2Fences.designspace  avar2OpticalSize.designspace  config-alternate-glyphs.yaml  config-linear-rotation.yaml  config-quadratic-rotation.yaml  config-test-font-alternate-glyphs-decomposed.yaml  config-test-font-linear-rotation.yaml  config-test-font-quadratic-rotation.yaml  config-test-font.yaml
tests/: examples.md  screenshot.css
(+333 files in other folders)
