[project]
name = "how2avar2"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "fontmake==3.11.1",
  "gftools==0.9.994",
  "drawbot-skia==0.5.1",
  "sh==2.2.2",
  "bumpfontversion==0.4.1",
  "fonttools==4.62.1",
]

[project.optional-dependencies]
test = []


[tool.uv]
add-bounds = "exact"
